--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -14,17 +14,18 @@
     <li class="chat_page">
       <div class="chat_info">
         <h1>YOKOSO</h1>
-        <div class="userListDiv"></div>
+        <ul class="UserList"></ul>
+        
       </div>
       
       <div class="chat_area">
         <ul class="messages"></ul>
       </div>
-      <input type="text" placeholder="Type here..." class="message_input" />
+      <input type="text"  placeholder="Type here..." class="message_input" />
     </li>
     <li class="login_page">
       <div class="form">
-        <h3 class="title">What is your name?</h3>
+        <h3 class="title">Как тебя зовут?</h3>
         <input type="text" maxlength="14" class="username_input" />
       </div>
     </li>
